# openFOAM-LLM-integration

./: .env.example  .gitignore  00_START_HERE.txt  FILE_LISTING.md  IMPLEMENTATION_SUMMARY.md  README.md  STRUCTURE.md  TEST_RESULTS.md  cli.py  demo.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  run_multiple_tests.py  run_real_simulation.py  test_system.py
app/: __init__.py  case_generator.py  celery_worker.py  config.py  errors.py  llm_converter.py  logger.py  models.py  openfoam_wrapper.py  postprocessing.py  schemas.py  security.py  utils.py  validation.py
app/api/: __init__.py  endpoints.py  router.py
docker/: Dockerfile
docs/: PIPELINE_DOCUMENTATION.md  USER_GUIDE.md
scripts/: quickstart.sh
tests/: run_multiple_tests.py  run_real_simulation.py  test_api.py  test_comprehensive.py  test_converter.py  test_system.py
